2001-07-31  Jody Goldberg <jgoldberg@home.com>

	* src/application.c (application_init) : add new icons from evolution.
	* src/workbook-control-gui.c (workbook_standard_toolbar_orient) : Use
	  them.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-pane.c (gnm_pane_rangesel_bound_set) : typo.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-canvas.c (gnm_canvas_key_mode_sheet) : Use the properly
	  localized formats.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-canvas.c (gnm_canvas_key_mode_sheet) : Use
	  workbook_cmd_mutate_borders.
	* src/workbook-cmd-format.c (workbook_cmd_mutate_borders) : moved
	  from gnumeric_canvas.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/item-bar.c (item_bar_resize_stop) : renamed from
	  item_bar_end_resize to be consistent.

	* src/Makefile.am : rename gnumeric-sheet -> gnumeric-canvas

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-control.c (sc_wbc) : new.
	(sc_sheet) : const.
	(sc_update_cursor_pos) : delete.

	* src/gnumeric-pane.c (gnm_pane_special_cursor_bound_set) : new.
	(gnm_pane_special_cursor_start) : ditto.
	(gnm_pane_special_cursor_start) : ditto.

	* src/sheet-control-gui.c (scg_update_cursor_pos)  : fold into
	  scg_resize.
	(scg_resize) : reposition all of the cursors.
	(scg_edit_start) renamed from scg_create_editor.
	(scg_edit_stop) : renamed from scg_stop_editing.
	(scg_special_cursor_start) : new.
	(scg_special_cursor_stop) : new.
	(scg_special_cursor_bound_set) : new.

	* src/item-cursor.c (item_cursor_selection_event) : Use
	  scg_special_cursor_start, and scg_special_cursor_bound_set.
	(item_cursor_do_action) : use scg_special_cursor_stop.
	(item_cursor_do_drop) : ditto.
	(item_cursor_autofill_event) : ditto.
	(item_cursor_set_bounds_visibly) : Doh! fix my stupidity.
	  We need to change the visibility here because we explicitly disable
	  doing it in the scroll handlers.  We are constraining the scroll