@@ -1,0 +1,126 @@
+/* XPM */
+static char * i16_search_and_replace[] = {
+"16 16 107 2",
+"  	c None",
+". 	c #000000",
+"+ 	c #47473F",
+"@ 	c #0A0A09",
+"# 	c #4B4B43",
+"$ 	c #FEFEFE",
+"% 	c #34342E",
+"& 	c #9D9D8D",
+"* 	c #CFCFB9",
+"= 	c #C4C4AF",
+"- 	c #8D8D7F",
+"; 	c #353530",
+"> 	c #C1C1C1",
+", 	c #46463F",
+"' 	c #9C9C8C",
+") 	c #E2E2D0",
+"! 	c #EDEDE7",
+"~ 	c #C0C0AC",
+"{ 	c #B2B29F",
+"] 	c #828274",
+"^ 	c #4C4C44",
+"/ 	c #A8A8A8",
+"( 	c #090908",
+"_ 	c #D5D5BF",
+": 	c #FBFBFA",
+"< 	c #C3C3AE",
+"[ 	c #B5B5A2",
+"} 	c #A6A695",
+"| 	c #959586",
+"1 	c #080807",
+"2 	c #C0C0C0",
+"3 	c #404040",
+"4 	c #090909",
+"5 	c #CACAB5",
+"6 	c #DDDDD0",
+"7 	c #B7B7A4",
+"8 	c #AAAA98",
+"9 	c #9B9B8B",
+"0 	c #8C8C7D",
+"a 	c #EAEAEA",
+"b 	c #ABABAB",
+"c 	c #474740",
+"d 	c #929283",
+"e 	c #BABAA7",
+"f 	c #ADAD9B",
+"g 	c #9F9F8E",
+"h 	c #909081",
+"i 	c #727266",
+"j 	c #4C4C45",
+"k 	c #ECECEC",
+"l 	c #C5C5C5",
+"m 	c #EFEFEF",
+"n 	c #34342F",
+"o 	c #878779",
+"p 	c #A0A090",
+"q 	c #737367",
+"r 	c #010101",
+"s 	c #C4C4C4",
+"t 	c #FDFDFD",
+"u 	c #EEEEEE",
+"v 	c #969696",
+"w 	c #414141",
+"x 	c #C3C3C3",
+"y 	c #EDEDED",
+"z 	c #EBEBEB",
+"A 	c #030302",
+"B 	c #636363",
+"C 	c #9F9F9F",
+"D 	c #AFAFAF",
+"E 	c #C5C1B4",
+"F 	c #D6D1C0",
+"G 	c #D0C5A8",
+"H 	c #CFB467",
+"I 	c #D5B96B",
+"J 	c #DAB357",
+"K 	c #DFD1B1",
+"L 	c #F6F6EF",
+"M 	c #ADADAD",
+"N 	c #D2D2D2",
+"O 	c #53524A",
+"P 	c #D1CDBD",
+"Q 	c #31302C",
+"R 	c #CEC09D",
+"S 	c #C3AF81",
+"T 	c #B4944A",
+"U 	c #B89345",
+"V 	c #BB9C51",
+"W 	c #E2E2DF",
+"X 	c #A5A5A3",
+"Y 	c #6B6B6B",
+"Z 	c #BEBEBE",
+"` 	c #BDB9AB",
+" .	c #C2BBAC",
+"..	c #B6A989",
+"+.	c #826931",
+"@.	c #886D2F",
+"#.	c #978443",
+"$.	c #9B9352",
+"%.	c #E4E4E4",
+"&.	c #BDBDBD",
+"*.	c #020201",
+"=.	c #767676",
+"-.	c #BBBBBB",
+";.	c #E3E3E3",
+">.	c #CACACA",
+",.	c #BCBCBC",
+"'.	c #A0A0A0",
+"      . . . + @ @ # . .         ",
+"    . $ $ % & * = - ; > .       ",
+"    . $ , ' ) ! ~ { ] ^ / .     ",
+"    . $ ( _ : < [ } | 1 2 3 .   ",
+"    . $ 4 5 6 7 8 9 0 @ a b .   ",
+"    . $ c d e f g h i j k l .   ",
+"    . $ m n o p d q r r k s .   ",
+"    . t u v # @ @ w s r r x .   ",
+"    . t y k k k z z a r r r .   ",
+"  . A . . . . . . B C D r r r   ",
+". E F G H I J K L . . M N r r r ",
+"O P Q R S T U V W X . . Y Z r r ",
+". `  ...+.+.@.#.$.. . b %.&..   ",
+"  . *.. . . . . . =.-.;.;.-..   ",
+"    . >.&.&.&.,.,.-.-.-.-.'..   ",
+"      . . . . . . . . . . .     "};
